# nornet-ca

./: .travis.yml  CMakeLists.txt  ChangeLog  make-dist  make-ppa  packaging.conf  rpm.conf
debian/: changelog  control  copyright  nornet-ca.install  nornet-ca.postinst  nornet-ca.postrm  rules  watch
debian/source/: lintian-overrides
debian/upstream/: metadata
rpm/: nornet-ca.spec
src/: CMakeLists.txt
src/ca/: NorNet-CA-Level1.crt
